# HARAMO

./: .gitignore  LICENSE  README.md  concat.py  haramo_cluster_exsp.py  haramo_cluster_sp.py  haramo_cluster_sp_array.py  haramo_cluster_v4.py  haramo_concat.py  haramo_predict.py  haramo_tmp_predict.py  pyproject.toml  temp.py  tests.ipynb
src/haramo/: __init__.py
src/haramo/classification/: __init__.py  _instantiation.py  _optimisation.py
src/haramo/feature_selection/: __init__.py  _dataset_selection.py  _feature_clustering.py  _feature_selection.py  _feature_selector_hpo.py  _old_feature_selection.py  _tools.py
src/haramo/regression/: _evaluation.py  _instantiation.py
src/haramo/utils/: __init__.py  _dataset_reducer.py  _encoders.py  _evaluation.py  _scalers.py  _tools.py
